--- a/index.html
+++ b/index.html
@@ -1,23 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <meta name="theme-color" content="#33333d" />
-  <link rel="canonical" href="https://ncpleslie.github.io/" />
-  <meta name="description"
-    content="Nick Leslie is a software developer in Christchurch, New Zealand. These are his projects" />
-  <link rel="icon" href="favicon.ico" />
-  <title>Nick Leslie - Software Developer</title>
-<link href="/js/app.js" rel="preload" as="script"><link href="/js/chunk-vendors.js" rel="preload" as="script"></head>
-
-<body>
-  <noscript>
-    <strong>I'm sorry. Please enable JavaScript to view this website</strong>
-  </noscript>
-  <div id="app"></div>
-<script type="text/javascript" src="/js/chunk-vendors.js"></script><script type="text/javascript" src="/js/app.js"></script></body>
-
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=theme-color content=#33333d><link rel=canonical href=https://ncpleslie.github.io/ ><meta name=description content="Nick Leslie is a software developer in Christchurch, New Zealand. These are his projects"><link rel=icon href=favicon.ico><title>Nick Leslie - Software Developer</title><link href=/css/app.d41e6cc6.css rel=preload as=style><link href=/css/chunk-vendors.bd6e0244.css rel=preload as=style><link href=/js/app.6b548cff.js rel=preload as=script><link href=/js/chunk-vendors.c1cec9ef.js rel=preload as=script><link href=/css/chunk-vendors.bd6e0244.css rel=stylesheet><link href=/css/app.d41e6cc6.css rel=stylesheet></head><body><noscript><strong>I'm sorry. Please enable JavaScript to view this website</strong></noscript><div id=app></div><script src=/js/chunk-vendors.c1cec9ef.js></script><script src=/js/app.6b548cff.js></script></body></html>
