Update from https://github.com/ncpleslie/PersonalWebsite/commit/4a5e691de88920dbdf9d494e0139082b2f193e70

--- a/index.html
+++ b/index.html
@@ -1,1 +1,104 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="theme-color" content="#33333d"><link rel="canonical" href="https://nickleslie.dev/"><meta name="description" content="Nick Leslie is a software developer in Christchurch, New Zealand. These are his projects"><link rel="icon" href="./favicon.ico"><title>Nick Leslie - Software Developer</title><link href="/css/app.552b1894.css" rel="preload" as="style"><link href="/js/app.9f6588e4.js" rel="preload" as="script"><link href="/js/chunk-vendors.497446ce.js" rel="preload" as="script"><link href="/css/app.552b1894.css" rel="stylesheet"></head><body><noscript><strong>I'm sorry. Please enable JavaScript to view this website</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.497446ce.js"></script><script src="/js/app.9f6588e4.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="theme-color" content="#33333d" />
+  <link rel="canonical" href="https://nickleslie.dev/" />
+  <meta name="description"
+    content="Nick Leslie is a software developer in Christchurch, New Zealand. These are his projects" />
+  <link rel="icon" href="./favicon.ico" />
+  <title>Nick Leslie - Software Developer</title>
+  <style>
+    :root {
+  --background: #17141d;
+  --card: #17141d;
+  --accent1: #ff8a00;
+  --accent2: #e52e71;
+  --button: #27272f;
+  --button-accent: #33333d;
+}
+
+* {
+  margin: 0;
+}
+
+main {
+  font-family: "Avenir", Helvetica, Arial, sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+  margin-top: 0px;
+  background-color: var(--background);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-size: 10vw;
+  background: linear-gradient(90deg, var(--accent1), var(--accent2));
+  text-shadow: none;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: fadein 2s;
+}
+
+a:link {
+  color: var(--accent1);
+}
+
+a:visited {
+  color: var(--accent1);
+}
+
+a:hover {
+  color: var(--accent2);
+}
+
+a:active {
+  color: var(--accent2);
+}
+
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--background);
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, var(--accent1), var(--accent2));
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #a55800, #bb265d);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: #b30000;
+}
+  </style>
+</head>
+
+<body>
+  <noscript>
+    <strong>I'm sorry. Please enable JavaScript to view this website</strong>
+  </noscript>
+  <main class="main">
+    <h1>
+      This website is located at
+      <a href="https://nickleslie.dev">nickleslie.dev</a>
+    </h1>
+  </main>
+</body>
+
+</html>
